--- a/DAY6/index.html
+++ b/DAY6/index.html
@@ -12,8 +12,7 @@
             block element takes the full width available during coloring in css
         </div>
         <div>
-            refer google or notes for this topic
-        </div>
+            refer google or notes for this topic for who are block and inline elements        </div>
     </p>
     <form action="get">
         <label for="username">Username:</label>
